--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <li class="menu-item">
             <a class="menu-link" href="./index.html">Studio</a>
           </li>
-          <li class="menu-item"><a class="menu-link" href="#">Portfolio</a></li>
-          <li class="menu-item"><a class="menu-link" href="#">Contacts</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
+          <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -98,7 +98,7 @@
       <section class="team">
         <h2 class="title-team">Our Team</h2>
         <ul>
-          <li>
+          <li class="menu-team">
             <img
               src="./images/mark.jpg"
               alt="Mark Guerrero"
@@ -108,7 +108,7 @@
             <h3 class="title-name">Mark Guerrero</h3>
             <p class="text-profession">Product Designer</p>
           </li>
-          <li>
+          <li class="menu-team">
             <img
               src="./images/tom.jpg"
               alt="Tom Ford"
@@ -118,7 +118,7 @@
             <h3 class="title-name">Tom Ford</h3>
             <p class="text-profession">Frontend Developer</p>
           </li>
-          <li>
+          <li class="menu-team">
             <img
               src="./images/camila.jpg"
               alt="Camila Garcia"
@@ -128,7 +128,7 @@
             <h3 class="title-name">Camila Garcia</h3>
             <p class="text-profession">Marketing</p>
           </li>
-          <li>
+          <li class="menu-team">
             <img
               src="./images/daniel.jpg"
               alt="Daniel Wilson"
